fix overflow again

--- a/Css/style.css
+++ b/Css/style.css
@@ -136,11 +136,11 @@ body {
     font-family: "Josefin Sans";
     text-shadow: 2px 2px rgb(184, 57, 35);
     text-transform: uppercase;
-    top: 2vmin;
     position: relative;
+    top: 2vmin;
     text-align: center;
     /* border: dotted blue; */
-    font-size: 2.5vh;
+    font-size: 2.5vmin;
     height: 10vh;
 }
 
